[tool.poetry]
name = "goatfish"
version = "2.0.0a0"
description = "A small, schemaless ORM that is backed by SQLite."
authors = ["Stavros Korokithakis <hi@stavros.io>"]
license = "BSD-2-Clause"
homepage = "https://github.com/stochastic-technologies/goatfish/"
readme = "README.md"
keywords = ["database", "schemaless", "orm", "sqlite"]

[tool.poetry.dependencies]
python = ">=3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
